Updated Resume File

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <div class="grid-item" style="background-color:darkorange">C<br/><span style="font-size: 18px">(Intermediate)</span></div>
   <div class="grid-item" style="background-color:black">C++<br/><span style="font-size: 18px">(Basic)</span></div>
   <div class="grid-item" style="background-color:darkorange">HTML, CSS<br/><span style="font-size: 18px">(Advance)</span></div>
-  <div class="grid-item" style="background-color: black">Git & Github<br/><span style="font-size: 18px">(Advance)</span></div>
+  <div class="grid-item" style="background-color: black">Git & Github<br/><span style="font-size: 18px">(Intermediate)</span></div>
   <div class="grid-item" style="background-color: darkorange">JavaScript<br/><span style="font-size: 18px">(Intermediate)</span></div>
   <div class="grid-item" style="background-color: black">jQuery, jQueryUI, Bootstrap<br/><span style="font-size: 18px">(Intermediate)</span></div>
   <div class="grid-item" style="background-color: darkorange">PHP<br/><span style="font-size: 18px">(Basic)</span></div>
