--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </head>
     <body>
         <div class="container-fluid" id="image">
-                <a style="padding: 40px;font-size: 25px;position: fixed;top: 0;bottom: 0;z-index:2;font-weight: bold" href="#image">HOME</a>
-                <button><a href="UNIQUE%20RESUME.pdf">DOWNLOAD MY FULL RESUME</a></button>
+                <a style="font-size:25px; position:fixed; top:0; bottom: 100%; z-index:2; font-weight:bold" href="#image">HOME</a>
+            <button> <a href="UNIQUE%20RESUME.pdf">DOWNLOAD MY FULL RESUME</a></button>
                 <h1>Riya Sharma</h1>
-                <p>BUDDING DEVELOPER</p>  
+                <p>BUDDING DEVELOPER</p>
                 <img class="myPic" src="images/mypic.jpg">
-            </div>      
+        </div>     
         <!-- Slideshow container -->
 
 <div class="slideshow-container" class="w3-animate-fading">
@@ -163,7 +163,7 @@
 <div class="footer">
      <p>&copy;All Rights Reserved.</p>
         <p>Designed By Riya Sharma.</p>
-</div> 
+</div>
         <script src="carousel.js"></script>
          
         <!-- Optional JavaScript -->
